[package]
name = "bench-p2p-method-call"
version = "0.1.0"
edition = "2024"


[dependencies]
futures = { version = "0.3.31" }
atspi = { git = "https://github.com/odilia-app/atspi.git", branch = "p2p", version = "0.27.0", default-features = false, features = [
    "connection",
    "proxies",
    "tokio",
    "zbus",
] }
tokio = { version = "1.45.1", features = ["full"] }
argh = "0.1.13"
zbus = { version = "5.7.1", features = ["p2p", "tokio"] }
